--- a/src/view/allCars.fxml
+++ b/src/view/allCars.fxml
@@ -2,11 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="686.0" prefWidth="1191.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CustomerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="686.0" prefWidth="1191.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AllCarsController">
     <children>
         <VBox prefHeight="686.0" prefWidth="299.0" style="-fx-background-color: #16901D;">
             <children>
@@ -38,7 +38,7 @@
                             </font></Label>
                     </children>
                 </AnchorPane>
-                <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" lineSpacing="1.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="299.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Tableau de Bord">
+                <Button fx:id="dashboardMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" lineSpacing="1.0" mnemonicParsing="false" onAction="#openDashboardMenu" prefHeight="62.0" prefWidth="299.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Tableau de Bord" textFill="WHITE">
                     <VBox.margin>
                         <Insets />
                     </VBox.margin>
@@ -50,7 +50,7 @@
                         </ImageView>
                     </graphic>
                 </Button>
-                <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Agences">
+                <Button fx:id="agenciesMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" lineSpacing="1.0" mnemonicParsing="false" onAction="#openAgenciesMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Agences" textFill="WHITE">
                     <graphic>
                         <ImageView fitHeight="32.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: pointer;" translateX="-85.0">
                             <image>
@@ -59,7 +59,7 @@
                         </ImageView>
                     </graphic>
                 </Button>
-                <Button fx:id="menu" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Clients">
+                <Button fx:id="clientsMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openClientsMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Clients" textFill="WHITE">
                     <graphic>
                         <ImageView fitHeight="29.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: pointer;" translateX="-85.0">
                             <image>
@@ -68,7 +68,7 @@
                         </ImageView>
                     </graphic>
                 </Button>
-                <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Employés">
+                <Button fx:id="EmployeesMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openEmployeesMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Employés" textFill="WHITE">
                     <graphic>
                         <ImageView fitHeight="34.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: pointer;" translateX="-85.0">
                             <image>
@@ -77,7 +77,7 @@
                         </ImageView>
                     </graphic>
                 </Button>
-                <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Véhicules">
+                <Button fx:id="carsMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openCarsMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Véhicules" textFill="WHITE">
                     <graphic>
                         <ImageView fitHeight="44.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: pointer;" translateX="-85.0">
                             <image>
@@ -86,7 +86,7 @@
                         </ImageView>
                     </graphic>
                 </Button>
-                <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Réservations">
+                <Button fx:id="reservationsMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openReservationsMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Réservations" textFill="WHITE">
                     <graphic>
                         <ImageView fitHeight="33.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: pointer;" translateX="-85.0">
                             <image>
@@ -95,7 +95,7 @@
                         </ImageView>
                     </graphic>
                 </Button>
-                <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Locations">
+                <Button fx:id="locationsMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openLocationsMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Locations" textFill="WHITE">
                     <graphic>
                         <ImageView fitHeight="33.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: pointer;" translateX="-85.0">
                             <image>
@@ -106,75 +106,57 @@
                 </Button>
             </children>
         </VBox>
-        <HBox alignment="CENTER_RIGHT" layoutX="299.0" prefHeight="105.0" prefWidth="892.0" style="-fx-background-color: #D3F7D6;">
+        <HBox alignment="CENTER_RIGHT" layoutX="299.0" prefHeight="107.0" prefWidth="892.0" style="-fx-background-color: #D3F7D6;">
             <padding>
                 <Insets left="20.0" right="20.0" />
             </padding>
         </HBox>
         <VBox layoutX="299.0" layoutY="105.0" prefHeight="581.0" prefWidth="892.0" style="-fx-background-color: #efefef;">
             <children>
-                <GridPane prefHeight="579.0" prefWidth="892.0">
+            <HBox alignment="CENTER_LEFT" prefHeight="99.0" prefWidth="892.0">
+               <children>
+                  <Label style="-fx-font-weight: bold;" text="Catégorie">
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                  </Label>
+                  <ComboBox fx:id="categorieComboBox" prefHeight="24.0" prefWidth="129.0" promptText="Aucune séle" />
+                  <Label style="-fx-font-weight: bold;" text="Marque">
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Label>
+                  <ComboBox fx:id="marqueComboBox" prefHeight="24.0" prefWidth="167.0" promptText="Aucune séle" />
+                  <HBox alignment="CENTER" prefHeight="51.0" prefWidth="407.0">
+                     <children>
+                        <RadioButton contentDisplay="CENTER" mnemonicParsing="false" text="En cours de location" />
+                     </children>
+                  </HBox>
+               </children>
+            </HBox>
+                <GridPane prefHeight="579.0" prefWidth="774.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints maxHeight="281.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="524.0" minHeight="10.0" prefHeight="522.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <TableView fx:id="tableview" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                        <TableView fx:id="tableview" prefHeight="585.0" prefWidth="892.0">
                             <columns>
-                                <TableColumn prefWidth="179.0" text="id" />
-                                <TableColumn prefWidth="184.00003051757812" text="nom" />
-                                <TableColumn prefWidth="195.0" text="prénom" />
+                                <TableColumn fx:id="immatriculation" prefWidth="124.0" text="immatriculation" />
+                                <TableColumn fx:id="kilometrage" prefWidth="94.0" text="kilométrage" />
+                                <TableColumn fx:id="climatisation" prefWidth="101.0" text="climatisation" />
+                                <TableColumn fx:id="categorie" prefWidth="94.0" text="Catégorie" />
+                                <TableColumn fx:id="typeCarburant" prefWidth="121.0" text="type Carburant" />
+                                <TableColumn fx:id="typeBoite" prefWidth="98.0" text="type Boite" />
+                        <TableColumn fx:id="modele" prefWidth="150.0" text="modèle" />
+                                <TableColumn fx:id="agence" prefWidth="104.0" text="Agence" />
                             </columns>
                         </TableView>
-                        <HBox alignment="TOP_RIGHT" prefHeight="26.0" prefWidth="892.0">
-                            <children>
-                                <HBox alignment="CENTER" prefHeight="57.0" prefWidth="690.0">
-                                    <children>
-                                        <ImageView fitHeight="19.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                            <image>
-                                                <Image url="@../../../../../../../../../../windows/Users/loico/Documents/France/Efrei/Cours/Semestre%206/UE%20–%20INFORMATIQUE%20-%20APPLICATIONS%20-%206/Databases/Projet/rentCar/src/assets/magnifying-glass.png" />
-                                            </image>
-                                            <HBox.margin>
-                                                <Insets right="20.0" />
-                                            </HBox.margin>
-                                        </ImageView>
-                                        <TextField prefHeight="26.0" prefWidth="265.0" style="-fx-background-color: white;">
-                                            <padding>
-                                                <Insets left="20.0" right="20.0" />
-                                            </padding>
-                                        </TextField>
-                                        <VBox alignment="CENTER" prefHeight="57.0" prefWidth="229.0">
-                                            <children>
-                                                <RadioButton mnemonicParsing="false" text="location en cours" />
-                                                <RadioButton layoutX="56.0" layoutY="24.0" mnemonicParsing="false" text="aucune location" />
-                                            </children>
-                                        </VBox>
-                                    </children>
-                                </HBox>
-                                <HBox alignment="CENTER" prefHeight="57.0" prefWidth="331.0">
-                                    <children>
-                                        <Button fx:id="addClientButton" alignment="BASELINE_RIGHT" mnemonicParsing="false" onAction="#addClient" prefHeight="32.0" prefWidth="187.0" style="-fx-background-color: #16901D;" text="Ajouter un client">
-                                            <graphic>
-                                                <ImageView fitHeight="15.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
-                                                    <image>
-                                                        <Image url="@../../../../../../../../../../windows/Users/loico/Documents/France/Efrei/Cours/Semestre%206/UE%20–%20INFORMATIQUE%20-%20APPLICATIONS%20-%206/Databases/Projet/rentCar/src/assets/plus.png" />
-                                                    </image>
-                                                </ImageView>
-                                            </graphic>
-                                            <HBox.margin>
-                                                <Insets />
-                                            </HBox.margin>
-                                            <padding>
-                                                <Insets left="20.0" right="20.0" />
-                                            </padding>
-                                        </Button>
-                                    </children>
-                                </HBox>
-                            </children>
-                        </HBox>
                     </children>
                 </GridPane>
             </children></VBox>
