--- a/src/view/allCustomers.fxml
+++ b/src/view/allCustomers.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="686.0" prefWidth="1191.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CustomerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="686.0" prefWidth="1191.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AllCustomersController">
    <children>
       <VBox prefHeight="686.0" prefWidth="299.0" style="-fx-background-color: #16901D;">
          <children>
@@ -38,7 +38,7 @@
                      </font></Label>
                </children>
             </AnchorPane>
-            <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" lineSpacing="1.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="299.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Tableau de Bord">
+            <Button fx:id="dashboardMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" lineSpacing="1.0" mnemonicParsing="false" onAction="#openDashboardMenu" prefHeight="62.0" prefWidth="299.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Tableau de Bord" textFill="WHITE">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
@@ -50,7 +50,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Agences">
+            <Button fx:id="agenciesMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openAgenciesMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Agences" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="32.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: pointer;" translateX="-85.0">
                      <image>
@@ -59,7 +59,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="menu" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Clients">
+            <Button fx:id="clientsMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openClientsMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Clients" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: pointer;" translateX="-85.0">
                      <image>
@@ -68,7 +68,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Employés">
+            <Button fx:id="employeesMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openEmployeesMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Employés" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="34.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: pointer;" translateX="-85.0">
                      <image>
@@ -77,7 +77,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Véhicules">
+            <Button fx:id="carsMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openCarsMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Véhicules" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="44.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: pointer;" translateX="-85.0">
                      <image>
@@ -86,7 +86,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Réservations">
+            <Button fx:id="reservationsMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openReservationsMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Réservations" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="33.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: pointer;" translateX="-85.0">
                      <image>
@@ -95,7 +95,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Locations">
+            <Button fx:id="locationsMenu" alignment="BASELINE_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="133.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openLocationsMenu" prefHeight="62.0" prefWidth="305.0" style="-fx-background-color: #16901D; -fx-alignment: center;" text="Locations" textFill="WHITE">
                <graphic>
                   <ImageView fitHeight="33.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: pointer;" translateX="-85.0">
                      <image>
@@ -129,6 +129,7 @@
                         <TableColumn fx:id="prenom" prefWidth="137.0" text="prénom" />
                         <TableColumn fx:id="tel" prefWidth="141.0" text="tel" />
                         <TableColumn fx:id="adresse" prefWidth="249.0" text="adresse" />
+                        <TableColumn fx:id="actions" prefWidth="164.0" text="Actions" />
                     </columns>
                   </TableView>
                   <HBox alignment="TOP_RIGHT" prefHeight="26.0" prefWidth="892.0">
@@ -150,8 +151,7 @@
                               </TextField>
                               <VBox alignment="CENTER" prefHeight="57.0" prefWidth="229.0">
                                  <children>
-                                    <RadioButton mnemonicParsing="false" text="location en cours" />
-                                    <RadioButton layoutX="56.0" layoutY="24.0" mnemonicParsing="false" text="aucune location" />
+                                    <ComboBox fx:id="comboBox" prefHeight="24.0" prefWidth="212.0" promptText="Aucune séle" />
                                  </children>
                               </VBox>
                            </children>
